--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="PrismaGram" />
+    <meta name="description" content="Prismagram" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Prismagram</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
